Added NPM scripts. Fixed package.json config

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -5,7 +5,7 @@
 	  "outDir": "./dist",
 	  "baseUrl": ".",
 	  "paths": {
-		"@retailer-api/shared": ["../shared/src/*.ts"]
+		"@retailer-api/shared": ["../shared/src/index.ts"]
 		}
 	},
 	"references": [{ "path": "../shared/" }],
