--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "ts-node packages/core/src/index.ts",
+		"start": "npm run build:shared && ts-node packages/core/src/index.ts",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "tsc -b --verbose tsconfig.build.json"
+		"build": "tsc -b --verbose tsconfig.build.json",
+		"build:shared": "tsc -b packages/shared/tsconfig.json",
+		"build:api": "tsc -b packages/api/tsconfig.json",
+		"build:core": "tsc -b packages/core/tsconfig.json"
 	},
 	"author": "",
 	"license": "ISC",
@@ -14,5 +17,9 @@
 		"packages\\api",
 		"packages\\core",
 		"packages\\shared"
-	]
+	],
+	"devDependencies": {
+		"ts-node": "^10.7.0",
+		"typescript": "^4.6.4"
+	}
 }
